[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "stock-price-predictor"
version = "0.1.0"
description = "A Python project for predicting stock prices using historical data."
authors = [Jusung Hwang j.hwang-3@student.tudelt.nl]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jusung-github/stock-price-js"
homepage = "https://github.com/jusung-github/stock-price-js"

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^1.3"
numpy = "^1.21"
matplotlib = "^3.4"
scikit-learn = "^0.24"
yfinance = "^0.1.63"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.coverage.report]
omit = ["tests/*"]
